<resources>
    <string name="app_name">Time Manager</string>
    <string name="account_type">com.example.taskmanager</string>

    <string name="app_name_text">todo list</string>
    <string name="welcome_text">Welcome</string>
    <string name="welcome_back_text">Welcome back</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="successful">Successful!</string>
    <string name="welcome_to_text">Welcome to todo list</string>
    <string name="work_happens_text">Work happens</string>
    <string name="tasks_and_assign_text">Tasks and assign</string>

    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="reset_text">Reset code</string>
    <string name="new_password_text">New password</string>
    <string name="confirm_password_text">Confirm password</string>

    <string name="username_hint">Enter your username</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="number_hint">Enter your number</string>
    <string name="password_confirm_hint">Enter your confirm password</string>

    <string name="tasks_and_text">Task and assign them to colleagues.</string>
    <string name="get_notified_text">Get notified when work happens.</string>
    <string name="whats_going_text">Whats going to happen tomorrow?</string>
    <string name="you_change_text"> You have successfully change password. Please use your new passwords when logging in.</string>
    <string name="please_enter_text">Please enter your email below to receive your password reset instructions</string>
    <string name="reset_code_text">Reset code was sent to your email. Please enter the code and create new password</string>
    <string name="sign_in_to_text">Sign in to continue</string>
    <string name="sign_up_to_text">Sign up to continue</string>

    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="send_req_text">Send request</string>
    <string name="change_password_text">Change password</string>

    <string name="menu_projects_text">project</string>
    <string name="my_task_menu_text">my task</string>
    <string name="profile_menu_text">profile</string>
    <string name="period_menu_text">period</string>

    <string name="button_get_started_text">Get Started</string>

    <string name="in_text">In</string>
    <string name="type_text">Type</string>
    <string name="type_text_edit">Type</string>
    <string name="project_text">Project</string>
    <string name="title_hint">Title</string>
    <string name="description_text">Description</string>
    <string name="due_date_text">Due Date</string>
    <string name="anytime_button_text">Anytime</string>
    <string name="time_button_text">Time</string>
    <string name="date_button_text">Date</string>
    <string name="add_member_text">Add Member</string>
    <string name="member_text">Members</string>
    <string name="anyone_hint">Anyone</string>
    <string name="add_task_button_text">Add Task</string>
    <string name="save_task_button_text">Save Task</string>
    <string name="add_project_button_text">Create Project</string>

    <string name="toolbar_new_task_text">New Task</string>
    <string name="toolbar_task_info_text">Task Info</string>
    <string name="toolbar_work_list_text">Work List</string>
    <string name="toolbar_projects_text">Projects</string>
    <string name="toolbar_periods_text">Time Periods</string>
    <string name="toolbar_profile_text">Profile</string>
    <string name="toolbar_add_period_text">Add Time Period</string>
    <string name="toolbar_add_check_list_text">Add Check List</string>
    <string name="toolbar_personal_text">Personal</string>

    <string name="plus_add_text">+</string>
    <string name="check_mark_text">✓</string>

    <string name="today_text">Today</string>
    <string name="month_text">Month</string>
    <string name="all_text">All</string>

    <string name="created_tasks_text">Created tasks</string>
    <string name="completed_tasks_text">Completed tasks</string>
    <string name="statistic_text">Statistic</string>
    <string name="events_text">Events</string>
    <string name="to_do_text">To do</string>
    <string name="time_periods_text">Time Periods</string>

    <string name="done_button_text">Done</string>
    <string name="choose_type">Choose type</string>
    <string name="add_time_period_text">Add Time Period</string>

    <string name="no_info_text">No info</string>
    <string name="start_text">Start</string>
    <string name="end_text">End</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>